# splatgl

./: .gitignore  COPYING  Makefile.am  README.md  SConstruct  Splat.spec.in  aclocal.m4  autogen.sh  configure.ac  configure.in  makedeb.sh  splat.pc.in  splat.spec.in  splatgl.pc.in  splatgl.spec.in  version.rc
debian/: splatgl-dev.control  splatgl.control
include/: csplat.h  splat.h
python/: SplatGL.py  setup.py  splat.py
python/splatgl/: __init__.py
src/: canvas.c  canvas.cpp  canvas.h  dcanvas.cpp  dcanvas.h  debug.c  debug.cpp  dimage.cpp  dimage.h  dinstance.h  dlayer.h  dobject.h  error.c  error.cpp  image.c  image.cpp  instance.c  instance.cpp  layer.c  layer.cpp  object.cpp  render.c  render.cpp  splat.c  splat.cpp  types.h
tests/: SConstruct  test.c
