AC_INIT(README)

AC_CONFIG_MACRO_DIR([m4])

MAJOR_VERSION=0
MINOR_VERSION=1
REVISION=0
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$REVISION
AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(REVISION)
AC_SUBST(VERSION)

LT_INIT([win32-dll])

AC_CANONICAL_HOST

AM_INIT_AUTOMAKE(splat, $VERSION)

CFLAGS='-fno-common -Wall -I$(top_srcdir)/include -fvisibility=hidden -fvisibility-inlines-hidden'
LIBS=''
LDFLAGS='-fvisibility=hidden -fvisibility-inlines-hidden'

# Configure OpenGL
LIBS="$LIBS `opengl-config --libs`"

# Configure SDL
CFLAGS="$CFLAGS `pkg-config --cflags sdl2`"
LIBS="$LIBS `pkg-config --libs sdl2`"

AC_ARG_ENABLE(debug, [  --enable-debug    Enable debug mode], CFLAGS=$CFLAGS' -O0 -g -DDEBUG', CFLAGS=$CFLAGS' -O2 -DNDEBUG')

CXXFLAGS="$CFLAGS -std=c++0x"

AC_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

if test -z "$host_alias"; then
    hostaliaswindres=
else
    hostaliaswindres="$host_alias-windres"
fi
AC_CHECK_PROGS(WINDRES, [windres $hostaliaswindres $host_os-windres])

case "$host" in
    *-*-cygwin* | *-*-mingw32*)
        if test "$build" != "$host"; then # cross-compiling
            # Default cross-compile location
            ac_default_prefix=/usr/local/cross-tools/i386-mingw32
        else
            # Look for the location of the tools and install there
            if test "$BUILD_PREFIX" != ""; then
                ac_default_prefix=$BUILD_PREFIX
            fi
        fi
        if test x$WINDRES != x; then
            use_version_rc=true
        fi
        ;;
esac
AM_CONDITIONAL(USE_VERSION_RC, test x$use_version_rc = xtrue)

AC_SUBST([WINDRES])

AC_OUTPUT([Makefile splat.spec splat.pc])
